--- a/sait.html
+++ b/sait.html
@@ -1,12 +1,1 @@
-<head>
-
-Some text in head
-
-<body>
-
-Some text in body
-ah shit here we go again
-
-</body>
-
-<head>
+<head>Some text in head lol<body>Some text in body ah shit here we go again</body><head>
